tests/baselines/reference/nonPrimitiveInGeneric.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInGeneric.ts(7,17): error TS2345: Argument of type '123' is not assignable to parameter of type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInGeneric.ts(8,17): error TS2345: Argument of type 'string' is not assignable to parameter of type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInGeneric.ts(14,7): error TS2345: Argument of type '123' is not assignable to parameter of type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInGeneric.ts(15,7): error TS2345: Argument of type 'string' is not assignable to parameter of type 'object'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveInGeneric.ts (4 errors) ====
    function generic<T>(t: T) {}
    var a = {};
    var b = "42";
    
    generic<object>({});
    generic<object>(a);
    generic<object>(123); // expect error
                    ~~~
!!! error TS2345: Argument of type '123' is not assignable to parameter of type 'object'.
    generic<object>(b); // expect error
                    ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'object'.
    
    function bound<T extends object>(t: T) {}
    
    bound({});
    bound(a);
    bound(123); // expect error
          ~~~
!!! error TS2345: Argument of type '123' is not assignable to parameter of type 'object'.
    bound(b); // expect error
          ~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'object'.
    